[package]
name = "acoustic-walk"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
crossbeam-channel = "0.5.1"
hound = "3.4.0"
jack = "0.7.1"
probability = "0.17.0"
rand = "0.8.3"
rand_distr = "0.4.0"
samplerate = "0.2.4"
text_io = "0.1.8"
walkdir = "2.3.2"
